--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Inferonclass1"
         tools:targetApi="31">
         <activity
+            android:name=".Bts3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Bts2Activity"
+            android:exported="false" />
+        <activity
             android:name=".Bts1Activity"
             android:exported="false" />
         <activity
